
  * Support %i in the FILELAYOUT configuration variable to insert the
    current numerical user id to allow one using /run/user/<numerical_id>/ as
    TARGETDIR.
  * Make documentation of the configuration file easier to grok.
  * Update "reburden" script link to point to the Wayback Machine. *sigh*
  * Fix a superfluous whitespace in output (and in the according tests).

 -- Axel Beckert <abe@debian.org>  Sun, 13 Feb 2022 21:58:14 +0100

unburden-home-dir (0.4.1.3) unstable; urgency=medium

  * Minor documentation updates. (Updated links to 3rd parties, removed
    no more working GitPitch stuff, etc.)
  * Update tests unnecessarily broken by usrmerge. (Closes: #997507)
  * Travis CI: stop testing again Perl "dev". It no more seems to exist.
  * Declare compliance with Debian Policy 4.6.0. (No changes needed.)

 -- Axel Beckert <abe@debian.org>  Sun, 24 Oct 2021 04:42:58 +0200

unburden-home-dir (0.4.1.2) unstable; urgency=medium

  * Bump debhelper compatibility level to 13.
    + Build-depend on "debhelper-compat (= 13)" to replace debian/compat.
    + Drop --fail-missing from dh_install, it's now dh_missing's default.
  * Extend Makefile to also remove cloudflare crap and generally any
    occurrences of unneeded <script> tags from mkdocs-generated
    documentation. Documentation just doesn't need this! Thanks Lintian!
    + Uses pcregrep to catch multiline <script> tags. Add it as build-dep.
    + Drop recommends and symlink on mustache.js.
    + Also remove generated search form, search.html and search subfolder.
  * Drop debian/unburden-home-dir-doc.lintian-overrides, no more needed.
  * Drom ancient postinst/postrm/preinst files. They were handling a
    configuration file name change in 2012 and nowadays even cause lintian
    warnings.
  * Drop adequate as-installed test as adequate is no more maintained.
    + Also fixes lintian warning obsolete-runtime-tests-restriction.
  * Add lintian override for uses-deprecated-adttmp. This is a false