@@ -44,7 +44,7 @@ foreach my $configtype (qw(write_user_configs write_xdg_configs)) {
         "sending incremental file list\n" .
         "created directory ".$t->TP."-$demotarget1\n" .
         "./\n" .
-        "Symlinking ".$t->TP."-$demotarget1 -> ".$t->HOME."/$demofile1\n";
+        "Symlinking ".$t->HOME."/$demofile1 -> ".$t->TP."-$demotarget1\n";
     $t->eq_or_diff_stdout($wanted);
 
     dir_exists_ok( $t->TP."-$demotarget1", "First directory moved" );
