@@ -6,6 +6,8 @@ unburden-home-dir (0.4.2) UNRELEASED; urgency=medium
   * Make documentation of the configuration file easier to grok.
   * Update "reburden" script link to point to the Wayback Machine. *sigh*
   * Fix a superfluous whitespace in output (and in the according tests).
+  * Fix wrong file name order in output when creating symlinks after
+    replacing files or directories.
 
  -- Axel Beckert <abe@debian.org>  Sun, 13 Feb 2022 21:58:14 +0100
 
